--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -392,8 +392,9 @@ select {
   border-color: rgb(166, 166, 166);
 }
 .multichoicelist-selector-text {
-  padding: 2px 1px 2px 1px;
   display: inline-block;
+  padding-left: 2px;
+  padding-right: 2px;
   max-width: calc(100% - 40px);
 
   overflow: hidden;
@@ -538,15 +539,11 @@ select {
   
 }
 .modal-dialog-controlpanel {
-  padding: 5px 10px 5px 10px;
+  padding: 5px 10px 5px 5px;
   text-align: right;
 }
 .modal-dialog-leftbutton {
   float: left;
-  font-size: 15px;
-  padding: 5px 20px 5px 20px;
 }
 .modal-dialog-rightbutton {
-  font-size: 15px;
-  padding: 5px 20px 5px 20px;
 }
