--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -449,15 +449,20 @@ select {
   margin-top: 2px;
   
   color: rgb(75, 75, 75);
-  background-color: transparent;
+  background-color: rgb(230, 230, 230);
 
   border-radius: 5px;
 }
 .selection-list-item:hover {
-  background-color: rgb(200, 200, 200);
+  color: rgb(75, 75, 75);
+  background-color: rgb(220, 220, 220);
 }
 .selection-list-item-selected {
   background-color: rgb(255, 51, 51);
+  color: white;
+}
+.selection-list-item-selected:hover {
+  background-color: rgb(255, 101, 101);
   color: white;
 }
 
