--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -385,6 +385,8 @@ select {
   cursor: default;
 }
 .multichoicelist-selector {
+  padding: 1px;
+  
   background-color: rgb(248, 248, 248);
   
   border-style: solid;
