minor change in the dialog buttons layout

--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -584,6 +584,8 @@ select {
 }
 .modal-dialog-leftbutton {
   float: left;
+  margin-left: 10px;
 }
 .modal-dialog-rightbutton {
+  margin-right: 10px;
 }
