search panel improved - Clear results

--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -154,6 +154,9 @@ select {
 .search-bar .search-button {
   margin-left: 10px;
 }
+.search-bar .clear-search-button {
+  margin-left: 10px;
+}
 
 .attachmentbar {
   height: 70px;
