--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -518,6 +518,72 @@ select {
 }
 
 
+.gallery {
+  height: 100px;
+  text-align: center;
+  
+  background-color: bisque;
+}
+.gallery-left-button {
+  width: 30px;
+  height: 100px;
+  vertical-align: top;
+  
+  background-image: url(../imgs/left-arrow.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.gallery-content-panel {
+  display: inline-block;
+  width: calc(100% - 80px);
+  height: 100%;
+  padding-right: 20px;
+}
+.gallery-right-button {
+  width: 30px;
+  height: 100%;
+  vertical-align: top;
+  
+  background-image: url(../imgs/left-arrow.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.gallery-item {
+  display: inline-block;
+  width: 90px;
+  height: calc(90px - 2px);
+  margin-left: 20px;
+  padding: 5px;
+  
+  background-color: aquamarine;
+  
+  border-width: 1px;
+  border-style: groove;
+}
+.gallery-item-icon {
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  
+  background-color: lightgray;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.gallery-item-label {
+  display: inline-block;
+  width: 100%;
+  height: 20px;
+  margin-top: 5px;
+  text-align: center;
+}
+.gallery-item.gallery-item-selected {
+  border-style: solid;
+}
+
 .spinning-indicator {
   display: inline-block;
   position: fixed;
