--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -145,6 +145,68 @@ select {
 }
 
 
+.checkbox-combo {
+  display: inline-block;
+  --checkbox_size: 15px;
+  
+  cursor: default;
+}
+.checkbox-combo .checkbox-combo-frame {
+  display: inline-block;
+  width: var(--checkbox_size);
+  height: var(--checkbox_size);
+
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+}
+.checkbox-combo .checkbox-combo-check {
+  display: block;
+  height: 100%;
+  
+  background-image: url(../imgs/close.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.checkbox-combo .checkbox-combo-text {
+  float: right;
+  margin-left: 5px;
+  font: inherit;
+}
+
+
+.radiobutton-combo {
+  display: inline-block;
+  height: 15px;
+  
+  cursor: default;
+}
+.radiobutton-combo .radiobutton-combo-frame {
+  display: inline-block;  
+  height: 100%;
+
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+}
+.radiobutton-combo .radiobutton-combo-check {
+  display: inline-block;
+  width: 50%;
+  height: 50%;
+  margin-top: 25%;
+  margin-left: 25%;
+  
+  border-radius: 50%;
+  background-color: black;
+}
+.radiobutton-combo .radiobutton-combo-text {
+  float: right;
+  margin-left: 5px;
+  font: inherit;
+}
+
+
 .search-bar {
   display: inline-block;
 }
