--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -5,15 +5,18 @@ label {
 }
 
 button {
+  border-radius: 10px;
   border-style: solid;
   border-width: 1px;
   border-color: rgb(166, 166, 166);
+  
+  padding: 5px 10px 5px 10px;
   
   background-color: rgb(0, 133, 63);
   color: white;
   
   font-family: Verdana;
-  font-size: 12px;
+  font-size: 14px;
   
   outline: none;
 }
