position in list

--- a/web/ui/uiutils.css
+++ b/web/ui/uiutils.css
@@ -574,6 +574,9 @@ select {
 .selection-list {
   padding: 0px;
   font: inherit;
+  
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .selection-list-item {
   padding: 5px;
